--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "diplodoc",
   "version": "1.0.0",
   "description": "CLI tool to create beautiful easy to use static documentation or blog sites.",
-  "main": "node bin/diplodoc.js",
+  "main": "bin/diplodoc.js",
   "bin": {
-    "diplodoc": "diplodoc.js"
+    "diplodoc": "./bin/diplodoc.js"
   },
   "dependencies": {
     "color-name": "^1.1.4",
