--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "bin": {
     "diplodoc": "./bin/diplodoc.js"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node bin/diplodoc.js"
@@ -21,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Souvikns/diplodoc/issues"
   },
-  "homepage": "https://github.com/Souvikns/diplodoc#readme"
+  "homepage": "https://github.com/Souvikns/diplodoc#readme",
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "commander": "^7.1.0"
+  }
 }
