--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
+    "lodash": "^4.17.21",
     "marked": "^2.0.1"
   }
 }
