--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "inquirer": "^8.0.0",
+    "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.1"
   }
