--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
