--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Souvikns/diplodoc#readme",
   "dependencies": {
+    "ajv": "^8.0.5",
     "chalk": "^4.1.0",
     "chokidar": "^3.5.1",
     "commander": "^7.1.0",
