--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "inquirer": "^8.0.0",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
-    "marked": "^2.0.1"
+    "marked": "^2.0.1",
+    "webpack": "^5.28.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
