--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.1",
+    "recursive-readdir": "^2.2.2",
     "webpack": "^5.28.0"
   },
   "devDependencies": {
