--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "diplodoc": "./bin/diplodoc.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest . --coverage && codecov",
     "dev": "node bin/diplodoc.js"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "webpack": "^5.28.0"
   },
   "devDependencies": {
+    "codecov": "^3.8.1",
     "jest": "^26.6.3"
   }
 }
