--- a/.github/workflows/test.check.yml
+++ b/.github/workflows/test.check.yml
@@ -25,7 +25,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: node -g install yarn
-    - run: yarn add
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm test
