--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "jest . --coverage && codecov",
+    "test:watch": "jest . --watch",
     "dev": "node bin/diplodoc.js"
   },
   "repository": {
